<resources>
    <string name="app_name">Gallery X</string>
    <string name="title_activity_folder_image">folder_image</string>
    <string name="title_activity_image_viewer">ImageViewer</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="grid_size_2">2</string>
    <string name="grid_size_3">3</string>
    <string name="grid_size_4">4</string>
    <string name="grid_size_5">5</string>
    <string name="album">Albums</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="image">Image</string>
    <string name="full_image">Full Image</string>
</resources>