<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_grid_size"
        app:showAsAction="never"
        android:title="Grid Size">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/action_grid_size_2"
                    android:title="@string/grid_size_2" />
                <item
                    android:checked="true"
                    android:id="@+id/action_grid_size_3"
                    android:title="@string/grid_size_3" />
                <item
                    android:id="@+id/action_grid_size_4"
                    android:title="@string/grid_size_4"
                    />
                <item
                    android:id="@+id/action_grid_size_5"
                    android:title="@string/grid_size_5"
                    />
            </group>
        </menu>
    </item>
    <item android:title="@string/delete"
        android:id="@+id/deleteButton"
        app:showAsAction="always"
        android:visible="false">

    </item>
</menu>